load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "core",
    srcs = [
        "master.go",
        "publishPost.go",
        "signature.go",
    ],
    importpath = "github.com/numine777/OffByOne/core",
    visibility = ["//visibility:public"],
    deps = ["@io_gorm_gorm//:gorm"],
)
