load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "core",
    srcs = [
        "master.go",
        "publishPost.go",
        "signature.go",
    ],
    importpath = "github.com/numine777/OffByOne/core",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_satori_go_uuid//:go_uuid",
        "@io_gorm_gorm//:gorm",
    ],
)

go_test(
    name = "core_test",
    srcs = ["signature_test.go"],
    embed = [":core"],
)
